created css folder

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
 	<link rel="stylesheet" href="">
+	<header>My Website</header>
 </head>
 <body>
-	Hello world.
+	<div class='button'>Push me</div>
+	<p id='first'>First paragraph</p>
+	<p>Second paragraph</p>
 </body>
 </html>
