changed background color and modified header

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<title></title>
-	<link rel="stylesheet" href="">
-	<header>My Website</header>
+	<title>website</title>
+	<header>Welcome</header>
 </head>
 <body>
-	<div class='button'>Push me</div>
+	<div class='button'><a href="https://www.google.com">Push me</a></div>
 	<p id='first'>First paragraph</p>
 	<p>Second paragraph</p>
 </body>
